Fixed history timeline. Modified css to align the components horizontally

--- a/src/component/AboutPage/WeAreSection/style.css
+++ b/src/component/AboutPage/WeAreSection/style.css
@@ -1,3 +1,10 @@
+.wesection {
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+}
 .value-card-sizing {
     height: 30vh;
     aspect-ratio: 1.2 / 1;
